Update 'v9y0dc6av-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:1cea524df1a4b1597474bd38f41d978b17f6e00c@sha256:c1eba5674aa79f2e12da16007b65658a953d8b3cbb838fbb315f5e7730eab916

--- a/components/v9y0dc6av-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/v9y0dc6av-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: v9y0dc6av-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:1cea524df1a4b1597474bd38f41d978b17f6e00c@sha256:c1eba5674aa79f2e12da16007b65658a953d8b3cbb838fbb315f5e7730eab916
+          name: container-image
